feat: implementacion orden-controller completa